# sdl2-opengl

./: Cargo.toml  build.rs  rustfmt.toml  todo.md
src/: main.rs
