[package]
name = "sdl-opengl"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies.image]
version = "0.24.4"

[dependencies.sdl2]
version = "0.35.0"
features = ["bundled", "static-link"]

[dependencies.glam]
version = "0.22.0"

[build-dependencies.gl_generator]
version = "0.14.0"

[dependencies.lyon]
version = "0.17.10"

[dependencies.freetype-rs]
version = "0.31.0"
